Fixed large alignment

--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -5764,7 +5764,7 @@ a.thumbnail {
   .top-bar {
     margin-top: -10px;
     margin-right: auto;
-    margin-left: 0px; }
+    margin-left: 110px; }
   .top-bar-left {
     margin-top: 7px;
     margin-right: 40px;
